--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
   "name": "grade-system-backend",
   "version": "1.0.0",
+  "description": "Student Grade Management System Backend",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "node server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^7.0.0",
+    "multer": "^1.4.5-lts.1",
+    "xlsx": "^0.18.5",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "mongoose": "^8.18.0",
-    "multer": "^2.0.2",
-    "papaparse": "^5.5.3",
-    "xlsx": "^0.18.5"
+    "dotenv": "^16.0.3",
+    "papaparse": "^5.4.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
